# isos

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yaml
src/isos/: error.py  option.py  result.py
src/optres/: __init__.py  error.py  option.py  result.py
tests/unit/: test_option.py  test_result.py
